# cc1120

./: .gitignore  CMakeLists.txt  build
cmake/: CompilerOptionsMacros.cmake
ref/swrc253e/apps/cc1120_long_range_mode/: .cc1120_lrm_config.c.swo  .cc1120_lrm_config.c.swp  .cc1120_lrm_tx.c.swn  .cc1120_lrm_tx.c.swo  .cc1120_lrm_tx.c.swp  .cc1120_lrm_tx.h.swp
src/: .cc1120.cc.swo  .cc1120.cc.swp  .cc1120.h.swo  .cc1120.h.swp  .main.cc.swo  .main.cc.swp  bcm2835.c  cc1120.cc  cc1120.h  cc1120.test.cc  main.cc  main.rx.cc  main.tx.cc
src/config/: .conf.h.swp  .lrm470.conf.h.swp  .lrm_470_cfg.h.swp  config.h  lrm_470_cfg.h
src/enum/: .ext_register.h.swp  ext_register.h  register.h  strobe.h
